@@ -1,1 +1,0 @@
-Allows Qt applications to export menus over DBus to a menu applet
