@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 11:33:43 nia Exp $
-
-BLAKE2s (appmenu-qt-0.2.6.tar.bz2) = 2418d29fac0869c46afb528dedf4646ff9a85424b4e85c8b3a2c9d5811a5cdd4
-SHA512 (appmenu-qt-0.2.6.tar.bz2) = 399c05f6983150ed585727e58998a95bd55657f54c4091a6cfb34716ace0a8f5d207f3b353aad72d5ca1d26b9b3c1a34abc69f6ed8c97dc47140674d2aac56fe
-Size (appmenu-qt-0.2.6.tar.bz2) = 22569 bytes
