@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2024,v 1.2724 2024/04/26 15:22:13 wiz Exp $
+$NetBSD: CHANGES-2024,v 1.2725 2024/04/26 15:23:42 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2024:
 
@@ -4477,3 +4477,4 @@ Changes to the packages collection and infrastructure in 2024:
 	Removed sysutils/bacula-qt-console successor sysutils/bacula-qt5-console [wiz 2024-04-26]
 	Removed sysutils/bacula-tray-monitor sucessor sysutils/bacula-tray-monitor-qt5 [wiz 2024-04-26]
 	Removed textproc/soprano [wiz 2024-04-26]
+	Removed x11/appmenu-qt [wiz 2024-04-26]
